--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="wrapper">
         <nav class="navigation">
             <section class="container">
-                <a class="navigation-title" href="https://elementor-pro-gpl.github.io/">
+                <a class="navigation-title" href="https://elementorprogpl.github.io/">
                     <h1 class="title">ElementorProGPL</h1>
                 </a>
                 <ul class="navigation-list float-right">
@@ -160,7 +160,7 @@
             <section class="container">
                 <p>
                     Created with ♥ by
-                    <a target="_blank" href="https://elementor-pro-gpl.github.io/" title="CJ Patoilo">
+                    <a target="_blank" href="https://elementorprogpl.github.io/" title="elementorprogpl">
                         ElementorProGPL team</a>. Licensed under the
                     <a target="_blank" href="https://www.gnu.org/licenses/" title="GPL">GPL License</a>.
                 </p>
