--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="wrapper">
         <nav class="navigation">
             <section class="container">
-                <a class="navigation-title" href="https://elementorprogpl.github.io/">
+                <a class="navigation-title" href="https://elementorprogpl.github.io/elementor-pro-gpl/">
                     <h1 class="title">ElementorProGPL</h1>
                 </a>
                 <ul class="navigation-list float-right">
@@ -60,7 +60,7 @@
                     viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
                     <style type="text/css">
                         .st0 {
-                            fill: #DFE0E1;
+                            fill: #272e35;
                         }
 
                         .st1 {
@@ -160,7 +160,7 @@
             <section class="container">
                 <p>
                     Created with ♥ by
-                    <a target="_blank" href="https://elementorprogpl.github.io/" title="elementorprogpl">
+                    <a target="_blank" href="https://elementorprogpl.github.io/elementor-pro-gpl/" title="elementorprogpl">
                         ElementorProGPL team</a>. Licensed under the
                     <a target="_blank" href="https://www.gnu.org/licenses/" title="GPL">GPL License</a>.
                 </p>
