--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h1 class="title">ElementorProGPL</h1>
                 <p class="description" data-version="Currently">Free WordPress plugin that enables PRO features in the
                     Elementor page builder.<br>With automatic updates.<br><i><small>Currently v3.11.3</small></i></p>
-                <a class="button"
+                <a id="download" class="button"
                     href="https://github.com/ElementorProGPL/elementor-pro-gpl/releases/download/3.11.3/elementor-pro-gpl.zip"
                     title="Download">Download</a>
             </section>
