--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </header>
         <section class="container stripe" id="about">
             <h2 class="title">About</h2>
-            <p>ElementorProGPL is a derivative work from the Elementor Pro WordPress plugin by Elementor Ltd.</p>
+            <p>ElementorProGPL is a derivative work from the Elementor Pro WordPress plugin by Elementor Ltd. It started as a fork of the popular <a href="https://github.com/proelements/proelements" title="PRO Elements" target="_blank">PRO Elements</a> plugin with the intention of providing faster updates.</p>
             <p>Like the original, it is licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.html"
                     target="_blank">GNU General Public License, version 3</a> (GPLv3).<br>
                 But unlike the original, it is 100% free and does not require the activation to use it.</p>
